appId: com.langdk.ultimatestats.dev
name: Open Light Line Correction
---
- tapOn:
    id: 'tracker-line-action-tile'
- assertVisible:
    id: 'line-change-correct-line'
- tapOn:
    id: 'line-change-correct-line'
- assertVisible:
    text: 'Correct Current · Light'
